# pdf-toolkit

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pdf.rs
